assets/css/styles.css
body {
  background-color: #f5f5f5;
}

.block {
  margin: 20px 20px 20px 20px;
  padding: 5px 5px 5px 5px;
}

.content h1,
h2,
h3,
h4,
h5,
h6 {
  line-height: 200%;
}

.content p,
ul,
li {
  font-size: 18px;
}

.dropdown-menu {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0px;
  border-bottom-left-radius: 0;
}

@media screen and (max-width: 576px) {
  .home-carousel-item {
    height: 150px !important;
  }
}

@media screen and (min-width: 577px) and (max-width: 768px) {
  .home-carousel-item {
    height: 160px !important;
  }
}

@media screen and (min-width: 769px) and (max-width: 992px) {
  .home-carousel-item {
    height: 220px !important;
  }
}

@media screen and (min-width: 993px) and (max-width: 1140px) {
  .home-carousel-item {
    height: 280px !important;
  }
}

@media screen and (min-width: 1141px) {
  .home-carousel-item {
    height: 320px !important;
  }
}


.home-carousel-item {
  width: 100%;
  height: 300px;
}

.home-carousel-item img {
  position: absolute;
  top: -9999px;
  bottom: -9999px;
  left: -9999px;
  right: -9999px;
  margin: auto;
  height: 100%;
}

.breadcrumb-item+.breadcrumb-item::before {
  float: left;
  padding-right: var(--bs-breadcrumb-item-padding-x);
  color: #9a9793;
  content: var(--bs-breadcrumb-divider, "/");
}

.breadcrumb {
  --bs-breadcrumb-padding-x: 0rem;
  --bs-breadcrumb-padding-y: 0.375rem;
  --bs-breadcrumb-margin-bottom: 1rem;
  --bs-breadcrumb-bg: #f8f5f0;
  --bs-breadcrumb-border-radius: 0.25rem;
  --bs-breadcrumb-divider-color: var(--bs-secondary-color);
  --bs-breadcrumb-item-padding-x: 0.5rem;
  --bs-breadcrumb-item-active-color: var(--bs-secondary-color);
  display: flex;
  flex-wrap: wrap;
  padding: var(--bs-breadcrumb-padding-y) var(--bs-breadcrumb-padding-x);
  margin-bottom: var(--bs-breadcrumb-margin-bottom);
  font-size: var(--bs-breadcrumb-font-size);
  list-style: none;
  background-color: var(--bs-breadcrumb-bg);
  border-radius: var(--bs-breadcrumb-border-radius);
}

.breadcrumb {
  /*border: 1px solid #dfd7ca;*/
}

ol.breadcrumb>li.breadcrumb-item>a {
  text-decoration: none;
}

